--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -1,3 +1,8 @@
+production:
+  uri: <%= ENV['MONGOHQ_URL'] %>
+  max_retries_on_connection_failure: 20
+  persist_in_safe_mode: true
+  skip_version_check: true
 development:
   # Configure available database sessions. (required)
   sessions:
